Telefoonnummer voor SMS instelbaar gemaakt in Instellingen.

--- a/Android/OntworteldeBoom/app/src/main/AndroidManifest.xml
+++ b/Android/OntworteldeBoom/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
             android:label="@string/select_device"
             android:theme="@android:style/Theme.Holo.Dialog" />
 
+        <activity android:name="nl.drahmann.ontworteldeboom.NewPreferences"/>
+
     </application>
 
 </manifest>
